--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,12 +30,18 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_dotenv: ^5.1.0
+  dio: ^5.8.0
+  shared_preferences: ^2.0.15
+
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+ 
 
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
