--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   shared_preferences: ^2.0.15
   jwt_decoder: ^2.0.1
   flutter_hooks: ^0.20.5
+  flutter_svg: ^1.0.0
+  fluttertoast: ^8.2.10
 
 
 
@@ -69,6 +71,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - images/
+    - .env
       
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
